# Retrieval-based-Voice-Conversion-WebUI

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  THIRD_PARTY_NOTICES.md  api_231006.py  api_240604.py  delete_era001_lines.py  docker-compose.yml  extract_pitch.py  extract_pitch.pyi  find_references.py  gtk.css  gtk_ui.py  gui.py  gui_v1.py  infer-web.py  infer-web.pyi  main.py  preprocess.py  preprocess.pyi  pyproject.toml  pyworld.pyi  requirements-py311.txt  requirements.txt  run.sh  shared.py  shelve_store.db  test_extraction.py  train-web.py  web_ui.py
.github/: copilot-instructions.md
.github/prompts/: simplify.prompt.md
.github/workflows/: docker.yml  format.yml
configs/: config.json  config.py
i18n/: i18n.py  locale_diff.py  scan_i18n.py
i18n/locale/: en_US.json
infer/lib/: audio.py  rmvpe.py  rtrvc.py  slicer2.py
infer/lib/infer_pack/: attentions.py  attentions_onnx.py  commons.py  models.py  models_onnx.py  modules.py  onnx_inference.py  transforms.py
infer/lib/infer_pack/modules/F0Predictor/: DioF0Predictor.py  F0Predictor.py  HarvestF0Predictor.py  PMF0Predictor.py
infer/lib/jit/: __init__.py  get_hubert.py  get_rmvpe.py  get_synthesizer.py
infer/lib/train/: data_utils.py  extract.py  losses.py  mel_processing.py  params.py  process_ckpt.py  utils.py
infer/lib/uvr5_pack/: utils.py
infer/lib/uvr5_pack/lib_v5/: dataset.py  layers_new.py  spec_utils.py
infer/modules/ipex/: __init__.py  attention.py  hijacks.py
infer/modules/onnx/: export.py
infer/modules/train/: extract_feature_print.py  preprocess.py  train.py
infer/modules/train/extract/: extract_f0_print.py  extract_f0_rmvpe.py  extract_f0_rmvpe_dml.py
infer/modules/uvr5/: mdxnet.py  modules.py  vr.py
infer/modules/vc/: f0_extractors.py  modules.py  pipeline.py  utils.py
lib/: __init__.py  hubert.py  synthesizer.py
lib/f0/: __init__.py  crepe.py  deepunet.py  dio.py  e2e.py  f0.py  gen.py  harvest.py  mel.py  rmvpe.py  stft.py
lib/ipex/: attention.py  gradscaler.py  hijacks.py
lib/jit/: jit.py
lib/layers/: attentions.py  discriminators.py  encoders.py  generators.py  norms.py  nsf.py  residuals.py  synthesizers.py  transforms.py  utils.py
lib/onnx/: __init__.py  exporter.py
lib/types/: __init__.py  f0.py  io.py
notebook/: colab.ipynb
src/configs/: config.py
src/i18n/: scan_i18n.py
src/infer/lib/: audio.py  rtrvc.py
src/infer/lib/infer_pack/: attentions.py  commons.py  modules.py  transforms.py
src/infer/lib/infer_pack/modules/F0Predictor/: HarvestF0Predictor.py  PMF0Predictor.py
src/infer/lib/jit/: get_rmvpe.py  get_synthesizer.py
src/infer/lib/train/: data_utils.py  process_ckpt.py  utils.py
src/infer/modules/onnx/: export.py
src/infer/modules/train/: extract_feature_print.py  preprocess.py
src/infer/modules/train/extract/: extract_f0_rmvpe.py  extract_f0_rmvpe_dml.py
src/infer/modules/vc/: f0_extractors.py  modules.py  pipeline.py  utils.py
src/lib/f0/: e2e.py  mel.py  pm.py  stft.py
src/lib/layers/: attentions.py  nsf.py  utils.py
src/lib/onnx/: infer.py  synthesizer.py
src/rvc/: gtk_ui.py  shared.py  web_ui.py
src/rvc/configs/: config.py
src/rvc/i18n/: i18n.py
src/rvc/infer/lib/: rmvpe.py  rtrvc.py
src/rvc/infer/lib/infer_pack/: attentions.py  attentions_onnx.py  models.py  models_onnx.py  modules.py
src/rvc/infer/lib/infer_pack/modules/F0Predictor/: DioF0Predictor.py  F0Predictor.py  HarvestF0Predictor.py  PMF0Predictor.py
src/rvc/infer/lib/jit/: __init__.py
src/rvc/infer/lib/train/: data_utils.py  process_ckpt.py
src/rvc/infer/modules/ipex/: __init__.py  gradscaler.py
src/rvc/infer/modules/onnx/: export.py
src/rvc/infer/modules/train/: extract_feature_print.py  preprocess.py  train.py
src/rvc/infer/modules/train/extract/: extract_f0_print.py  extract_f0_rmvpe.py  extract_f0_rmvpe_dml.py
src/rvc/infer/modules/vc/: f0_extractors.py  modules.py  pipeline.py  utils.py
src/rvc/lib/: hubert.py
src/rvc/lib/f0/: fcpe.py  harvest.py
src/rvc/lib/jit/: __init__.py
src/rvc/lib/layers/: discriminators.py
src/rvc/lib/types/: __init__.py  f0.py
src/rvc/tabs/: ckpt_processing_tab.py  faq_tab.py  inference_tab.py  onnx_tab.py  train_tab.py
src/rvc/tools/: download_models.py  infer_batch_rvc.py  infer_cli.py  rvc_for_realtime.py
src/rvc/tools/infer/: infer-pm-index256.py  train-index-v2.py
src/rvc/tools/torchgate/: torchgate.py
src/tabs/: train_tab.py
src/tabs/train/: create_preprocess_section.py  extract_pitch.py  extract_pitch_config.py  log.py  preprocess.py  run_training.py  train_tab.py
src/tools/: calc_rvc_model_similarity.py  infer_batch_rvc.py
src/tools/infer/: infer-pm-index256.py  train-index.py  trans_weights.py
tabs/: ckpt_processing_tab.py  faq_tab.py  inference_tab.py  onnx_tab.py  train_tab.py  vocal_tab.py
tests/: __init__.py  conftest.py  test_preprocess.py  test_train.py  test_training_utilities.py
tools/: calc_rvc_model_similarity.py  dlmodels.sh  download_models.py  export_onnx.py  infer_batch_rvc.py  infer_cli.py  rvc_for_realtime.py
tools/infer/: infer-pm-index256.py  train-index-v2.py  train-index.py  trans_weights.py
tools/torchgate/: torchgate.py
typings/scipy/io/: wavfile.pyi
typings/scipy/signal/: _signaltools.pyi
