[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rvc"
version = "0.1.0"
dependencies = [
    "av>=16.0.1",
    "dotenv>=0.9.9",
    "fairseq>=0.12.2",
    "faiss",
    "gradio>=4.50.0",
    "librosa>=0.11.0",
    "praat-parselmouth>=0.4.6",
    "pyworld>=0.3.5",
    "requests>=2.31.0",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchcrepe>=0.0.24",
]
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["infer*", "i18n*"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
faiss = { git = "https://github.com/spencersutton/faiss.git" }
fairseq = { git = "https://github.com/yamada-sexta/fairseq.git" }

[tool.ruff.lint]
extend-select = [
    "C4",
    "COM",
    "ERA",
    "F",
    "FLY",
    "FURB",
    "I",
    "ICN",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PTH",
    "Q",
    "RUF",
    "TC",
    "TID",
    "UP",
    "PL",
]
ignore = ["E741", "COM812", "N", "PLR"]

[tool.pyright]
typeCheckingMode = "standard"
reportMissingParameterType = true

[dependency-groups]
dev = [
    "infer-types>=1.0.0",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
