[project]
name = "rvc-webgui-fork"
version = "0.1.0"
description = "A Fork of RVC WebGUI with many quality of life improvements"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=15.0.0",
    "fairseq",
    "faiss-cpu>=1.7.3",
    "fsspec>=2022.11.0",
    "gitpython>=3.1.44",
    "gradio[mcp]>=3.34.0",
    "json5>=0.12.0",
    "jurigged>=0.6.1",
    "librosa>=0.11.0",
    "numpy>=1.23.5",
    "onnxruntime-gpu>=1.22.0 ; sys_platform != 'darwin'",
    "onnxruntime>=1.22.0 ; sys_platform == 'darwin'",
    "poluvr[gpu]>=1.9.0 ; sys_platform != 'darwin'",
    "poluvr>=1.9.0 ; sys_platform == 'darwin'",
    "praat-parselmouth>=0.4.2",
    "python-dotenv>=1.0.0",
    "setuptools<81",
    "pyworld>=0.3.5",
    "resampy>=0.4.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "sounddevice>=0.5.2",
    "soundfile>=0.12.1",
    "torch==2.7.0",
    "torchaudio>=2.7.0",
    "torchcrepe>=0.0.24",
    "torchfcpe>=0.0.4",
    "torchvision>=0.22.0",
    "tornado>=6.1",
    "tqdm>=4.63.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
gtk = [
    # List the GTK dependencies here for the extra-dependencies group
    "pygobject>=3.52.3",
    "pygobject-stubs>=2.13.0",
]


[tool.setuptools]
packages = ["infer", "lib", "tabs", "i18n"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
marker = "sys_platform == 'win32' or sys_platform == 'linux'"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
marker = "sys_platform == 'darwin'"

[tool.uv]
package = true

[tool.uv.sources]
fairseq = { git = "https://github.com/yamada-sexta/fairseq.git" }

[tool.ruff.lint]
extend-select = [
    "C4",
    "COM",
    "ERA",
    "F",
    "FLY",
    "FURB",
    "I",
    "ICN",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PL",
    "PTH",
    "Q",
    "RUF",
    "TC",
    "TID",
    "UP",
]
ignore = ["E741", "COM812", "N", "PLR", "PLW0603"]

[tool.pyright]
typeCheckingMode = "standard"
reportMissingParameterType = true

[dependency-groups]
dev = ["pyright>=1.1.407"]
